--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,6 +1,6 @@
 name: Run Unit Tests
 
-on: 
+on:
   push:
     branches:
       - main
@@ -15,25 +15,22 @@ on:
 
 jobs:
   "unittest_reveng_paj7620":
-     strategy:
-       matrix:
-         os: [ubuntu-latest, macos-latest, windows-latest]
-     runs-on: ${{ matrix.os }}
-     steps:
-       - uses: actions/checkout@v2
-       - uses: ruby/setup-ruby@v1
-         with:
-           ruby-version: 2.6
-       - uses: actions/setup-python@v2
-         with:
-           python-version: '3.x'
-       - name: Install Python Serial
-         run: |
-           python -m pip install --upgrade pip
-           pip install pyserial
-       - name: Run unit tests
-         run: |
-           g++ -v
-           bundle install
-           bundle exec arduino_ci.rb
-         shell: bash
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install Python Serial
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyserial
+      - name: Run unit tests
+        run: |
+          g++ -v
+          bundle install
+          bundle exec arduino_ci.rb
+        shell: bash
