Simplified testing to just ubuntu for speed. Could be reintroduced if issues arise.

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -19,7 +19,7 @@ jobs:
   "unittest_reveng_paj7620":
      strategy:
        matrix:
-         os: [ubuntu-latest, macos-latest, windows-latest]
+         os: [ubuntu-latest]
      runs-on: ${{ matrix.os }}
      steps:
        - uses: actions/checkout@v2
