Added linting support along with performed first initial lint path

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,5 +32,5 @@ jobs:
        - name: Run rev-version script
          run: |
            NEW_VERSION=${{github.event.inputs.newVersion}}
-           ./scripts/rev-version.sh ${NEW_VERSION:+--next ${NEW_VERSION}}
+           ./scripts/rev_version.sh ${NEW_VERSION:+--next ${NEW_VERSION}}
            
