--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,4 +33,15 @@ jobs:
          run: |
            NEW_VERSION=${{github.event.inputs.newVersion}}
            ./scripts/rev_version.sh ${NEW_VERSION:+--next ${NEW_VERSION}}
-           
+       - name: Create Pull Request
+         uses: peter-evans/create-pull-request@v3
+         with:
+           commit-message: "[Automated] Rev Version to ${{github.event.inputs.newVersion}}"
+           branch: $NEW_BRANCH_NAME
+           base: "master"
+           title: "[Automated] Rev Version to ${{github.event.inputs.newVersion}}"
+           body: |
+             Automated Update
+             ===
+
+             Rev Version to ${{github.event.inputs.newVersion}}
