--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -30,10 +30,12 @@ jobs:
        - name: Run flake8
          if: always()
          run: |
+           cd scripts
            source .paj7620-env/bin/activate
            flake8 --config=lint.ini
        - name: Run pylint
          if: always()
          run: |
+           cd scripts
            source .paj7620-env/bin/activate
            pylint --rcfile=lint.ini ./*
